force-app/main/default/objects/SMSTracking__c/SMSTracking__c.object-meta.xml
<CustomObject>
    <description>Tracciamento di tutti gli esiti su canale SMS  inviate da Marketing Cloud</description>
    <label>SMS Tracking</label>
    <nameField>
        <displayFormat>STK-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>