force-app/main/default/objects/SMSTracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup all&apos;Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Tracking</relationshipLabel>
    <relationshipName>SMS_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>