force-app/main/default/objects/SMSTracking__c/fields/ActionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActionDateTime__c</fullName>
    <description>&quot;The actual date/time a deliver or non delivery event was received by the Marketing Cloud.

NOTE Timestamps for delivery receipts are not indicative of when a message was received on a handset. The SMS industry does not support read receipts, and the data returned in this view are based of of when a delivery receipt is returned to our system.&quot;</description>
    <label>ActionDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>