force-app/main/default/objects/SMSTracking__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity di Appuntamento</label>
    <referenceTo>wrts_prcgvr__Activity__c</referenceTo>
    <relationshipLabel>SMS Tracking</relationshipLabel>
    <relationshipName>SMS_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>