force-app/main/default/objects/SMSTracking__c/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sarà valorizzato con CampaignID</description>
    <label>ID Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>SMS Tracking</relationshipLabel>
    <relationshipName>SMS_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>