force-app/main/default/objects/SMSTracking__c/fields/CampaignIDCode__c.field-meta.xml
<CustomField>
    <fullName>CampaignIDCode__c</fullName>
    <description>The SMS campaign tied to the record</description>
    <label>ID Campagna Codice</label>
    <length>18</length>
    <type>Text</type>
</CustomField>