force-app/main/default/objects/SMSTracking__c/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <description>Enterprise ID number for the sender</description>
    <label>EID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>