force-app/main/default/objects/SMSTracking__c/fields/FromName__c.field-meta.xml
<CustomField>
    <fullName>FromName__c</fullName>
    <description>From Name that an individual message was deployed with. Maximum length: 11 characters</description>
    <label>FromName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>