force-app/main/default/objects/SMSTracking__c/fields/IdLog__c.field-meta.xml
<CustomField>
    <fullName>IdLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID Salesforce dell&apos;oggetto ComunicazionLog__c</description>
    <label>IdLog</label>
    <referenceTo>CommunicationLog__c</referenceTo>
    <relationshipLabel>SMS Tracking</relationshipLabel>
    <relationshipName>SMSTracking</relationshipName>
    <type>Lookup</type>
</CustomField>