force-app/main/default/objects/SMSTracking__c/fields/Inbound__c.field-meta.xml
<CustomField>
    <fullName>Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the message was incoming (1 = true, 0 = false)</description>
    <label>Inbound</label>
    <type>Checkbox</type>
</CustomField>