force-app/main/default/objects/SMSTracking__c/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the message was a test message</description>
    <label>IsTest</label>
    <type>Checkbox</type>
</CustomField>