force-app/main/default/objects/SMSTracking__c/fields/KeywordID__c.field-meta.xml
<CustomField>
    <fullName>KeywordID__c</fullName>
    <description>Unique identifier for the keyword</description>
    <label>KeywordID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>