force-app/main/default/objects/SMSTracking__c/fields/MID__c.field-meta.xml
<CustomField>
    <fullName>MID__c</fullName>
    <description>Member ID</description>
    <label>MID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>