force-app/main/default/objects/SMSTracking__c/fields/MobileMessageRecurrenceID__c.field-meta.xml
<CustomField>
    <fullName>MobileMessageRecurrenceID__c</fullName>
    <description>The ID of the recurrence schedule for the message. Can be used for troubleshooting send issues.</description>
    <label>MobileMessageRecurrenceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>