force-app/main/default/objects/SMSTracking__c/fields/ModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ModifiedDateTime__c</fullName>
    <description>The date and time the tracking record was modified</description>
    <label>Data di modifica</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>