force-app/main/default/objects/SMSTracking__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sarà valorizzato con OrderID</description>
    <label>ID Ordine</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>SMS Tracking</relationshipLabel>
    <relationshipName>SMS_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>