force-app/main/default/objects/SMSTracking__c/fields/Outbound__c.field-meta.xml
<CustomField>
    <fullName>Outbound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the message was outgoing (1 = true, 0 = false)</description>
    <label>Outbound</label>
    <type>Checkbox</type>
</CustomField>