force-app/main/default/objects/SMSTracking__c/fields/SendID__c.field-meta.xml
<CustomField>
    <fullName>SendID__c</fullName>
    <description>The send ID number for the SMS send</description>
    <label>SendID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>