force-app/main/default/objects/SMSTracking__c/fields/SendPersonID__c.field-meta.xml
<CustomField>
    <fullName>SendPersonID__c</fullName>
    <description>The sendperson ID for the SMS send</description>
    <label>SendPersonID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>