force-app/main/default/objects/SMSTracking__c/fields/ShortCode__c.field-meta.xml
<CustomField>
    <fullName>ShortCode__c</fullName>
    <description>The short code or long code used to send your message</description>
    <label>ShortCode</label>
    <length>18</length>
    <type>Text</type>
</CustomField>