force-app/main/default/objects/SMSTracking__c/fields/SubscriberID__c.field-meta.xml
<CustomField>
    <fullName>SubscriberID__c</fullName>
    <description>The subscriber ID for the affected subscriber. This number represents the unique ID for each subscriber record</description>
    <label>SubscriberID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>