force-app/main/default/objects/SMSTracking__c/fields/Undelivered__c.field-meta.xml
<CustomField>
    <fullName>Undelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the message was delivered successfully or not (1 = true, 0 = false)</description>
    <label>Non Consegnato</label>
    <type>Checkbox</type>
</CustomField>