force-app/main/default/objects/SMSTracking__c/fields/Unsub__c.field-meta.xml
<CustomField>
    <fullName>Unsub__c</fullName>
    <description>If the subscriber unsubscribed (1 = true, 0 = false)</description>
    <label>Disiscrizione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>